ultimo commit, app incompleta pero funciona. Soy una estudiante lenta en relación a la media

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,15 @@
 
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
     <%= render 'shared/navbar' %>
-    administrador@correo.cl clave 123456
-    operador1@gmail.com  clave: 123456
+
+      <div class="card" style="width: 50rem;">
+          <div class="card-body">      
+            <p class="card-text"> Me faltó tiempo!
+      administrador@correo.cl clave 123456
+      operador1@gmail.com  clave: 123456</p>   
+          </div>
+      </div>
+
     <%= yield %>
   </body>
 </html>
