--- a/app/views/maintenances/edit.html.erb
+++ b/app/views/maintenances/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing maintenance</h1>
+<h1>Editar Mantención</h1>
 
 <%= render "form", maintenance: @maintenance %>
 
 <br>
 
 <div>
-  <%= link_to "Show this maintenance", @maintenance %> |
-  <%= link_to "Back to maintenances", maintenances_path %>
+  <%= link_to "Mostrar", @maintenance %> |
+  <%= link_to "Regresar", maintenances_path %>
 </div>
