--- a/app/views/maintenances/show.html.erb
+++ b/app/views/maintenances/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @maintenance %>
 
 <div>
-  <%= link_to "Edit this maintenance", edit_maintenance_path(@maintenance) %> |
-  <%= link_to "Back to maintenances", maintenances_path %>
+  <%= link_to "Editar", edit_maintenance_path(@maintenance) %> |
+  <%= link_to "Regresar", maintenances_path %>
 
-  <%= button_to "Destroy this maintenance", @maintenance, method: :delete %>
+  <%= button_to "Eliminar", @maintenance, method: :delete %>
 </div>
