--- a/app/views/motors/_form.html.erb
+++ b/app/views/motors/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: motor) do |form| %>
   <% if motor.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(motor.errors.count, "error") %> prohibited this motor from being saved:</h2>
+      <h2><%= pluralize(motor.errors.count, "error") %> prohibido guardar este motor:</h2>
 
       <ul>
         <% motor.errors.each do |error| %>
@@ -12,22 +12,22 @@
   <% end %>
 
   <div>
-    <%= form.label :tipo, style: "display: block" %>
+    <%= form.label :tipo, style: "bloqueo de pantalla" %>
     <%= form.text_field :tipo %>
   </div>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
+    <%= form.label :name, style: "bloqueo de pantalla" %>
     <%= form.text_field :name %>
   </div>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
+    <%= form.label :description, style: "bloqueo de pantalla" %>
     <%= form.text_field :description %>
   </div>
 
   <div>
-    <%= form.label :photo, style: "display: block" %>
+    <%= form.label :photo, style: "bloqueo de pantalla" %>
     <%= form.text_field :photo %>
   </div>
 
