--- a/app/views/motors/_motor.html.erb
+++ b/app/views/motors/_motor.html.erb
@@ -5,18 +5,21 @@
   </p>
 
   <p>
-    <strong>Name:</strong>
+    <strong>Nombre:</strong>
     <%= motor.name %>
   </p>
 
   <p>
-    <strong>Description:</strong>
+    <strong>Descripción:</strong>
     <%= motor.description %>
   </p>
 
   <p>
-    <strong>Photo:</strong>
+    <strong>Foto:</strong>
     <%= motor.photo %>
   </p>
-
+  <p>
+    <strong>ID:</strong>
+    <%= motor.id %>
+  </p>
 </div>
