--- a/app/views/motors/edit.html.erb
+++ b/app/views/motors/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing motor</h1>
+<h1>Editar</h1>
 
 <%= render "form", motor: @motor %>
 
 <br>
 
 <div>
-  <%= link_to "Show this motor", @motor %> |
-  <%= link_to "Back to motors", motors_path %>
+  <%= link_to "Mostrar", @motor %> |
+  <%= link_to "Regresar", motors_path %>
 </div>
