--- a/app/views/motors/index.html.erb
+++ b/app/views/motors/index.html.erb
@@ -1,14 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Motors</h1>
+<h1>Motores</h1>
+<%= link_to "Nuevo Motor", new_motor_path %>
 
 <div id="motors">
   <% @motors.each do |motor| %>
     <%= render motor %>
     <p>
-      <%= link_to "Show this motor", motor %>
+      <%= link_to "Mostrar", motor %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New motor", new_motor_path %>
